# lingua_self-dist_v3

./: .d0004656358  .d0004656358_nodeinfo  .gitignore  main.py  pyproject.toml
apps/self_dist/: eval.py  generate.py  train.py
apps/self_dist/configs/: eval.yaml  llama_continual_debug.yaml  llama_continual_test.yaml  qwen_continual_debug.yaml  smallLM_continual_debug.yaml
converter/: ckpt_hf_to_lingua.py  ckpt_hf_to_lingua_autoconfig.py  ckpt_lingua_to_hf.py  ckpt_pth_to_dcp.py  confirm_ckpt_hf_to_lingua.py
script/converter/: ckpt_lingua_to_dcp.sh  ckpt_llama-3.2-1b_to_lingua.sh  ckpt_llama_1b_continual_to_hf.sh  ckpt_qwen3_to_lingua.sh  ckpt_smallLM_to_lingua.sh
script/download_model/: download_smallLM_360M.sh
script/evals/test/: linguaeval_test.sh
script/flow_train_to_eval/: flow_llama-1b_ce.sh  flow_smallLM_ce.sh
script/flow_train_to_eval/multi_node/: flow_multi_llama-1b_ce.sh  flow_multi_smallLM_ce.sh
script/lm-eval/: eval_lingua2hf_and_eval.sh  eval_llama_hf.sh  eval_llama_hf_bin_only.sh  eval_llama_local.sh  eval_llama_local_ce.sh  eval_llama_local_small.sh
script/lm-eval/test/: eval_gpt2_bin_test.sh  eval_llama-1b_continual.sh  eval_with_base_model.sh
script/pretrain/: pretrain_small.sh  pretrain_small_debug.sh
script/self_dist/: sd_llama-1b_ce.sh  sd_llama-1b_lossSearch.sh  sd_llama-3.2-1b_continual_test.sh  sd_smallLM_continual_test.sh
script/self_dist/multi_node/: sd_llama-3.2-1b_continual_test.sh  sd_multi_llama-1b.sh  sd_multi_llama-1b_ce.sh  sd_smallLM_continual_test.sh
