[project]
name = "lingua-self-dist-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blobfile>=3.1.0",
    "datatrove>=0.7.0",
    "lm-eval>=0.4.9.2",
    "msgspec>=0.20.0",
    "numpy>=2.4.0",
    "omegaconf>=2.3.0",
    "orjson>=3.11.5",
    "pynvml>=13.0.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scipy>=1.16.3",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "viztracer>=1.1.1",
    "wandb>=0.23.1",
    "xformers>=0.0.33.post2",
]
